# ai_box_esp32_ali

./: README.md  RELEASE.note
example/esp32s3/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.old
example/esp32s3/components/BSP/: CMakeLists.txt  README.md
example/esp32s3/components/BSP/audio/codec/: es8311.c  es8311.h  es8388.c  es8388.h
example/esp32s3/components/BSP/audio/i2s/: i2s.c  i2s.h
example/esp32s3/components/BSP/board/: board_config.h  board_user.h
example/esp32s3/components/BSP/bus/i2c/: i2c.c  i2c.h  myi2c.c  myi2c.h
example/esp32s3/components/BSP/bus/spi/: spi.c  spi.h
example/esp32s3/components/BSP/display/lcd/: lcd.c  lcd.h
example/esp32s3/components/BSP/display/touch/: touch.c  touch.h
example/esp32s3/components/BSP/io/xl9555/: xl9555.c  xl9555.h
example/esp32s3/components/BSP/storage/sd/: sd.c  sd.h
example/esp32s3/components/Middlewares/TEXT/: CMakeLists.txt  convert.c  convert.h  fonts.c  fonts.h  text.c  text.h
example/esp32s3/components/voice_chat/: CMakeLists.txt
example/esp32s3/components/voice_chat/include/: conv_code.h  conv_utest.h  conversation.h  device_config.h
example/esp32s3/main/: CMakeLists.txt  Kconfig.projbuild  usr_access.h  voice_chat.c
example/esp32s3/main/audio/: audio_controller.c  audio_controller.h
example/esp32s3/main/boards/sp-esp32-s3-1.28-box/: config.h
example/esp32s3/main/cache/: buffer_pool.c  buffer_pool.h
example/esp32s3/main/show/: lcd_show.c  lcd_show.h
example/esp32s3/main/wifi_sta/: wifi_sta.c  wifi_sta.h
include/: conv_constants.h  conv_event.h  device_config.h
user_lib/: CMakeLists.txt  Kconfig.projbuild
user_lib/esp32_s3_es8311/: board.c  board_pins_config.c
